# OutQuantLab

./: .gitignore  App_Backend.py  App_Frontend.py  CONTRIBUTING.md  Launch_UI.py  Main.ipynb  Main.py  Main_Backend.py  Main_UI.py  README.md  Run.py  WIP.py  pyproject.toml  requirements.txt  run.py
App/: App_Backend.py  App_Frontend.py  Data_Provider.py  Data_Refresher.py  Interface.py  __init__.py
Backtest/: AggregateReturns.py  Apply_Signals.py  Backtest_Initialization.py  Backtest_Main.py  Backtest_Process.py  Main.py  ParametersGeneration.py  Process_Data.py  Process_Indicators.py  Process_Signals.py  Process_Strategies.py  README.md  Returns_Calculations.py  Sharpe_Optimization.py  Transform_Data.py  __init__.py
Config/: Clusters.py  Config.py  Config_Assets.py  Config_Backend.py  Config_Common.py  Config_Funcs.py  Config_Indicators.py  Config_Main.py  Config_Params.py  Config_Structure.py  Dynamic_Config.py  Dynamic_Config_Assets.py  Dynamic_Config_Backend.py  Dynamic_Config_Frontend.py  Dynamic_Config_Params.py  Indicators.py  Strategy_Params_Generation.py  Widget_Common.py  __init__.py
ConfigClasses/: Assets.py  Clusters.py  Collections.py  Indicators.py  __init__.py
Cython_Funcs/: __init__.py  funcs.c  funcs.cp312-win_amd64.pyd  funcs.pyi  funcs.pyx  setup.py
Dashboard/: Clusters.py  Common.py  Computations.py  Display.py  Format.py  README.md  Transformations.py  Widgets.py  __init__.py
Data/: Clean_Data.py  Organize_Data.py  README.md  Transform_Data.py  __init__.py
Database/: Data_File.py  Data_Queries.py  Files_Paths.py  System_Management.py  (+3 more)
(+297 files in other folders)
